Fixed overflow bug - modofied index.html, script.js & style.css.

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,12 @@ html {
 
 }
 
+html.sr .load-hidden {
+
+    visibility: hidden;
+
+}
+
 body {
 
     /* background: var(--bg-color); */
